Full rebrand: meme-only wiki + real meme arcade games; sample-first audio (assets/sfx) with procedural fallback

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light" />
-  <meta name="description" content="SpingoWiki — memes, characters (original mascots), and games with procedural sound." />
+  <meta name="description" content="SpingoWiki — memes, characters (original mascots), and a meme arcade." />
   <title>SpingoWiki</title>
 
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' fill='%23f5f5f5'/%3E%3Cpath d='M14 44c10 9 26 9 36 0' stroke='%230645ad' stroke-width='5' fill='none' stroke-linecap='round'/%3E%3Ccircle cx='24' cy='28' r='4' fill='%230645ad'/%3E%3Ccircle cx='40' cy='28' r='4' fill='%230645ad'/%3E%3Ctext x='32' y='56' text-anchor='middle' font-size='10' fill='%230645ad' font-family='system-ui'%3EWIKI%3C/text%3E%3C/svg%3E" />
@@ -22,14 +22,14 @@
       </button>
       <div class="mw-brand">
         <div class="mw-brand__name">SpingoWiki</div>
-        <div class="mw-brand__tag">A totally reliable encyclopedia of vibes, desync, and bad ideas.</div>
+        <div class="mw-brand__tag">A totally reliable encyclopedia of vibes, brainrot, and bad ideas.</div>
       </div>
     </div>
 
     <div class="mw-top__mid" aria-label="Search">
       <label class="mw-search" for="search">
         <span class="mw-search__label">Search</span>
-        <input id="search" class="mw-search__input" type="search" placeholder="Search: remoteExec, desync, spongebon…" autocomplete="off" />
+        <input id="search" class="mw-search__input" type="search" placeholder="Search: bruh, yeet, pog, spongebon…" autocomplete="off" />
       </label>
     </div>
 
@@ -67,7 +67,7 @@
 
       <section class="mw-sidebox" aria-label="Today">
         <div class="mw-sidebox__title">Today’s featured error</div>
-        <div class="mw-sidebox__body" id="featured-error">Undefined variable in expression: <code>competence</code></div>
+        <div class="mw-sidebox__body" id="featured-error">404: vibes not found.</div>
       </section>
 
       <section class="mw-sidebox" aria-label="Meme warning">
@@ -82,20 +82,20 @@
       <article id="article" class="mw-article" aria-label="Main article">
         <header class="mw-article__head">
           <h1 class="mw-h1">SpingoWiki</h1>
-          <div class="mw-sub">From the free encyclopedia that keeps spawning RPT lines.</div>
+          <div class="mw-sub">From the free encyclopedia that keeps spawning nonsense.</div>
         </header>
 
         <div class="mw-lead">
-          <p><strong>SpingoWiki</strong> is a meme-first mini wiki with original mascots (Spingo, Jimbo, Shronk), procedural sound, and a games portal.</p>
-          <p>Type <code>spingo</code>/<code>jimbo</code>/<code>shronk</code> (or the aliases you requested) to swap the site’s accent vibe.</p>
+          <p><strong>SpingoWiki</strong> is a meme-first mini wiki with original mascots (Spingo, Jimbo, Shronk), a soundboard, and a games portal.</p>
+          <p>Type <code>spingo</code>/<code>jimbo</code>/<code>shronk</code> (or your aliases) to swap the site’s accent vibe.</p>
         </div>
 
         <aside class="infobox" aria-label="Infobox">
           <div class="infobox__title">Quick facts</div>
           <div class="infobox__row"><span>Genre</span><span>Wikipedia-ish meme portal</span></div>
-          <div class="infobox__row"><span>Audio</span><span>Procedural WebAudio</span></div>
-          <div class="infobox__row"><span>Assets</span><span>No external images/audio</span></div>
-          <div class="infobox__row"><span>Primary exports</span><span>Vibes, not missions</span></div>
+          <div class="infobox__row"><span>Audio</span><span>Your own samples + fallback</span></div>
+          <div class="infobox__row"><span>Assets</span><span>No external images shipped</span></div>
+          <div class="infobox__row"><span>Primary exports</span><span>Vibes</span></div>
           <div class="infobox__stamps" aria-hidden="true">
             <span class="stamp">CITATION NEEDED</span>
             <span class="stamp">REAL</span>
@@ -128,7 +128,7 @@
               </span>
               <span class="card__title">Spingo</span>
               <span class="card__meta">aka “spongebon” (typing alias)</span>
-              <span class="card__desc">Solves engineering by adding bubbles until the problem leaves.</span>
+              <span class="card__desc">Solves life by adding bubbles until the problem leaves.</span>
             </button>
 
             <button class="card" role="listitem" type="button" data-mascot="jimbo">
@@ -142,7 +142,7 @@
               </span>
               <span class="card__title">Jimbo</span>
               <span class="card__meta">aka “jimmyneutron” (typing alias)</span>
-              <span class="card__desc">Invents solutions for problems you don’t have (then adds networking).</span>
+              <span class="card__desc">Invents solutions for problems you don’t have (then adds sparkle).</span>
             </button>
 
             <button class="card" role="listitem" type="button" data-mascot="shronk">
@@ -162,13 +162,13 @@
 
           <div class="memeBox">
             <div class="memeBox__title">Citation needed</div>
-            <div class="memeBox__body">Click any mascot card to switch the site vibe and spawn some extremely serious effects.</div>
+            <div class="memeBox__body">Click any mascot card to switch vibe + spawn extremely serious effects.</div>
           </div>
         </section>
 
         <section id="meme-tools" class="mw-section" aria-label="Meme tools">
           <h2 class="mw-h2">Meme tools</h2>
-          <p>This is the part where you press buttons and pretend it’s productivity.</p>
+          <p>This is the part where you press buttons and pretend it’s research.</p>
 
           <div class="toolgrid" aria-label="Soundboard">
             <button class="mw-btn" type="button" data-sfx="bubble">Bubble</button>
@@ -182,18 +182,18 @@
           </div>
 
           <div class="mw-note">
-            Pro meme tip: type <code>spongebon</code>, <code>jimmyneutron</code>, or <code>shrek</code> to swap modes without clicking.
+            Pro meme tip: type <code>spongebon</code>, <code>jimmyneutron</code>, or <code>shrek</code> to swap vibes without clicking.
           </div>
         </section>
 
         <section id="games" class="mw-section" aria-label="Games">
           <h2 class="mw-h2">Games</h2>
-          <p>There’s a dedicated games page with three mini meme games (click-to-play) and the same sound engine.</p>
-          <p><a href="games.html">Open the Games portal</a>.</p>
+          <p>There’s a dedicated arcade page with real meme games and the same sound engine.</p>
+          <p><a href="games.html">Open the Meme Arcade</a>.</p>
 
           <div class="memeBox memeBox--blue">
             <div class="memeBox__title">Featured game</div>
-            <div class="memeBox__body">RemoteExec Firewall: decide if a request is SAFE or SUS before desync wins.</div>
+            <div class="memeBox__body">Whack-a-Meme: click the stamps before they escape your attention span.</div>
           </div>
         </section>
 
@@ -201,8 +201,8 @@
           <h2 class="mw-h2">FAQ</h2>
 
           <details class="faq" open>
-            <summary>“Why not the real characters?”</summary>
-            <div class="faq__body">Because shipping copyrighted images/voice clips (or look‑alike derivatives) is a fast track to DMCA sadness. This site uses original mascots + procedural sound instead.</div>
+            <summary>“Can I use real clips from movies/series?”</summary>
+            <div class="faq__body">Only if you have the rights. This repo is set up for you to add your own audio files in <code>assets/sfx/</code>.</div>
           </details>
 
           <details class="faq">
@@ -213,7 +213,7 @@
 
         <footer class="mw-footer">
           <div class="mw-footer__row">This page was last edited at runtime by your vibes.</div>
-          <div class="mw-footer__row">No external assets. Procedural audio only.</div>
+          <div class="mw-footer__row">No external assets shipped. Your audio pack is local.</div>
         </footer>
       </article>
     </main>
