--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light" />
-  <meta name="description" content="SpingoWiki Games — meme mini games with procedural sound." />
+  <meta name="description" content="SpingoWiki Games — real meme arcade games with your own sound pack." />
   <title>SpingoWiki Games</title>
 
   <link rel="preload" href="styles.css" as="style" />
@@ -17,13 +17,13 @@
     <div class="mw-top__left">
       <a class="mw-mark mw-mark--link" href="index.html" aria-label="Back to SpingoWiki">SW</a>
       <div class="mw-brand">
-        <div class="mw-brand__name">Games</div>
-        <div class="mw-brand__tag">Click things. Hear noises. Gain confidence irresponsibly.</div>
+        <div class="mw-brand__name">Meme Arcade</div>
+        <div class="mw-brand__tag">No references. Just memes.</div>
       </div>
     </div>
 
-    <div class="mw-top__mid" aria-label="Search">
-      <div class="mw-note mw-note--inline">Tip: sound is off until you toggle it (browser rules).</div>
+    <div class="mw-top__mid" aria-label="Note">
+      <div class="mw-note mw-note--inline">Sound is off until you toggle it (browser rules).</div>
     </div>
 
     <div class="mw-top__right" aria-label="Controls">
@@ -48,58 +48,56 @@
 
     <article class="mw-article">
       <header class="mw-article__head">
-        <h1 class="mw-h1">Meme games portal</h1>
-        <div class="mw-sub">Warning: may cause unstoppable clicking.</div>
+        <h1 class="mw-h1">Meme Arcade</h1>
+        <div class="mw-sub">Three real games. No “editor” vibes.</div>
       </header>
 
       <section class="games" aria-label="Games">
         <article class="gcard">
-          <div class="gcard__title">1) Desync Popper</div>
-          <p class="mw-p">Pop the bubbles before they become forum posts. Misses add RPT errors.</p>
+          <div class="gcard__title">1) Whack-a-Meme</div>
+          <p class="mw-p">Click the stamps before they vanish. Combos happen accidentally.</p>
           <div class="gbar">
-            <button class="mw-btn mw-btn--primary" id="pop-start" type="button">Start</button>
-            <button class="mw-btn" id="pop-stop" type="button">Stop</button>
-            <span class="gstat">Score: <strong id="pop-score">0</strong></span>
-            <span class="gstat">Errors: <strong id="pop-errors">0</strong></span>
+            <button class="mw-btn mw-btn--primary" id="whack-start" type="button">Start</button>
+            <button class="mw-btn" id="whack-stop" type="button">Stop</button>
+            <span class="gstat">Score: <strong id="whack-score">0</strong></span>
+            <span class="gstat">Misses: <strong id="whack-miss">0</strong></span>
           </div>
-          <canvas class="gcanvas" id="pop-canvas" aria-label="Desync Popper canvas"></canvas>
+          <canvas class="gcanvas" id="whack-canvas" aria-label="Whack-a-Meme canvas"></canvas>
         </article>
 
         <article class="gcard">
-          <div class="gcard__title">2) RemoteExec Firewall</div>
-          <p class="mw-p">Decide if a request is SUS or SAFE. Wrong decisions increase “vibes” (bad).</p>
+          <div class="gcard__title">2) Reaction Roulette</div>
+          <p class="mw-p">It will bait you. Wait for NOW. Click fast.</p>
           <div class="gbar">
-            <button class="mw-btn mw-btn--primary" id="fw-start" type="button">Start</button>
-            <button class="mw-btn" id="fw-stop" type="button">Stop</button>
-            <span class="gstat">Score: <strong id="fw-score">0</strong></span>
-            <span class="gstat">Streak: <strong id="fw-streak">0</strong></span>
+            <button class="mw-btn mw-btn--primary" id="rr-start" type="button">Start</button>
+            <button class="mw-btn" id="rr-stop" type="button">Stop</button>
+            <span class="gstat">Best: <strong id="rr-best">—</strong></span>
+            <span class="gstat">Avg: <strong id="rr-avg">—</strong></span>
           </div>
           <div class="firewall">
-            <div class="req" id="fw-req" aria-label="Request card">Press Start.</div>
+            <div class="req" id="rr-status" aria-label="Status">Press Start.</div>
             <div class="row">
-              <button class="mw-btn mw-btn--primary" id="fw-allow" type="button">ALLOW</button>
-              <button class="mw-btn" id="fw-deny" type="button">DENY</button>
+              <button class="mw-btn mw-btn--primary" id="rr-click" type="button">CLICK</button>
             </div>
-            <div class="mw-note" id="fw-hint">Hint: broadcast to everyone is usually cursed.</div>
+            <div class="mw-note">Too early = clown. Too late = skill issue.</div>
           </div>
         </article>
 
         <article class="gcard">
-          <div class="gcard__title">3) Eden Placement Panic</div>
-          <p class="mw-p">Click fast to place entities. The grid lies. Snap is a suggestion.</p>
+          <div class="gcard__title">3) Meme Match</div>
+          <p class="mw-p">Memory game. Find pairs. Pretend you’re fine.</p>
           <div class="gbar">
-            <button class="mw-btn mw-btn--primary" id="pp-start" type="button">Start 20s</button>
-            <button class="mw-btn" id="pp-reset" type="button">Reset</button>
-            <span class="gstat">Placed: <strong id="pp-score">0</strong></span>
-            <span class="gstat">Time: <strong id="pp-time">20</strong>s</span>
+            <button class="mw-btn mw-btn--primary" id="mm-new" type="button">New game</button>
+            <span class="gstat">Moves: <strong id="mm-moves">0</strong></span>
+            <span class="gstat">Matches: <strong id="mm-matches">0</strong></span>
           </div>
-          <canvas class="gcanvas" id="pp-canvas" aria-label="Placement Panic canvas"></canvas>
+          <div class="mm-grid" id="mm-grid" aria-label="Meme Match grid"></div>
         </article>
       </section>
 
       <footer class="mw-footer">
-        <div class="mw-footer__row">No external assets. Procedural audio only.</div>
-        <div class="mw-footer__row">Type: spingo/jimbo/shronk. Konami does something dumb.</div>
+        <div class="mw-footer__row">Tip: add your own samples in <code>assets/sfx/</code> for real sounds.</div>
+        <div class="mw-footer__row">Type: spingo/jimbo/shronk (or your aliases). Konami still exists.</div>
       </footer>
     </article>
   </main>
