--- a/index.html
+++ b/index.html
@@ -1,233 +1,140 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light" />
-  <meta name="description" content="SpingoWiki — memes, characters (original mascots), and a meme arcade." />
-  <title>SpingoWiki</title>
+  <meta name="description" content="Klonkie’s Social — topics, memes, clowns, Arma, Rocket League." />
+  <title>Klonkie’s Social</title>
 
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' fill='%23f5f5f5'/%3E%3Cpath d='M14 44c10 9 26 9 36 0' stroke='%230645ad' stroke-width='5' fill='none' stroke-linecap='round'/%3E%3Ccircle cx='24' cy='28' r='4' fill='%230645ad'/%3E%3Ccircle cx='40' cy='28' r='4' fill='%230645ad'/%3E%3Ctext x='32' y='56' text-anchor='middle' font-size='10' fill='%230645ad' font-family='system-ui'%3EWIKI%3C/text%3E%3C/svg%3E" />
-
-  <link rel="preload" href="styles.css" as="style" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="preload" href="social.css" as="style" />
+  <link rel="stylesheet" href="social.css" />
 </head>
 <body>
-  <a class="skip" href="#content">Skip to content</a>
+  <a class="skip" href="#app">Skip to content</a>
 
-  <header class="mw-top" aria-label="Site header">
-    <div class="mw-top__left">
-      <button class="mw-mark" id="brand-mark" type="button" aria-label="Site mark (has secrets)">
-        <span aria-hidden="true">SW</span>
-      </button>
-      <div class="mw-brand">
-        <div class="mw-brand__name">SpingoWiki</div>
-        <div class="mw-brand__tag">A totally reliable encyclopedia of vibes, brainrot, and bad ideas.</div>
+  <header class="top">
+    <div class="brand">
+      <div class="logo" aria-hidden="true">KS</div>
+      <div>
+        <div class="brand__name">Klonkie’s Social</div>
+        <div class="brand__tag">Leuke clowntjes. Echte posts. Hard geluid.</div>
       </div>
     </div>
 
-    <div class="mw-top__mid" aria-label="Search">
-      <label class="mw-search" for="search">
-        <span class="mw-search__label">Search</span>
-        <input id="search" class="mw-search__input" type="search" placeholder="Search: bruh, yeet, pog, spongebon…" autocomplete="off" />
-      </label>
-    </div>
-
-    <div class="mw-top__right" aria-label="Controls">
-      <div class="mw-controls">
-        <button class="mw-btn" id="btn-mode-spingo" type="button" title="Spingo">Spingo</button>
-        <button class="mw-btn" id="btn-mode-jimbo" type="button" title="Jimbo">Jimbo</button>
-        <button class="mw-btn" id="btn-mode-shronk" type="button" title="Shronk">Shronk</button>
-      </div>
-
-      <div class="mw-controls">
-        <button class="mw-btn" id="btn-sound" type="button" aria-pressed="false">Sound: Off</button>
-        <button class="mw-btn" id="btn-mute" type="button" aria-pressed="false">Mute: Off</button>
-        <label class="mw-vol" for="vol">
-          <span class="mw-vol__label">Vol</span>
-          <input id="vol" type="range" min="0" max="100" value="70" />
-        </label>
-      </div>
-
-      <a class="mw-btn mw-btn--primary" href="games.html">Games</a>
-    </div>
+    <nav class="nav">
+      <a class="nav__link" href="games.html">Arcade</a>
+      <a class="nav__link" href="wiki.html">Wiki</a>
+      <button class="nav__btn" id="btn-sound" type="button" aria-pressed="true">Sound: On</button>
+      <button class="nav__btn" id="btn-mute" type="button" aria-pressed="false">Mute: Off</button>
+      <label class="vol" for="vol"><span>Vol</span><input id="vol" type="range" min="0" max="100" value="70" /></label>
+    </nav>
   </header>
 
-  <div class="mw-shell">
-    <aside class="mw-sidebar" aria-label="Sidebar">
-      <nav class="mw-nav" aria-label="Navigation">
-        <div class="mw-nav__title">Navigation</div>
-        <a class="mw-nav__link" href="#article">Main page</a>
-        <a class="mw-nav__link" href="#characters">Characters</a>
-        <a class="mw-nav__link" href="#meme-tools">Meme tools</a>
-        <a class="mw-nav__link" href="#games">Games</a>
-        <a class="mw-nav__link" href="#faq">FAQ</a>
-        <button class="mw-nav__link mw-nav__btn" id="btn-random" type="button">Random article</button>
-      </nav>
+  <main id="app" class="shell">
+    <section class="left">
+      <div class="card card--hero">
+        <div class="hero__title">For You</div>
+        <div class="hero__sub">Verified users only. No lurkers.</div>
+        <div class="hero__actions">
+          <button class="btn btn--primary" id="btn-open-auth" type="button">Login / Register</button>
+          <button class="btn" id="btn-logout" type="button" hidden>Logout</button>
+          <button class="btn" id="btn-profile" type="button" hidden>Profile</button>
+        </div>
+        <div class="toast" id="toast" role="status" aria-live="polite">Booting Klonkie’s Social…</div>
+      </div>
 
-      <section class="mw-sidebox" aria-label="Today">
-        <div class="mw-sidebox__title">Today’s featured error</div>
-        <div class="mw-sidebox__body" id="featured-error">404: vibes not found.</div>
-      </section>
+      <div class="card" id="gate" hidden>
+        <div class="card__title">Verify your email</div>
+        <p class="muted">Je account is gemaakt, maar je moet je mail bevestigen. Daarna pas toegang.</p>
+        <div class="row">
+          <button class="btn btn--primary" id="btn-resend" type="button">Resend verification</button>
+          <button class="btn" id="btn-ive-verified" type="button">I verified</button>
+        </div>
+      </div>
 
-      <section class="mw-sidebox" aria-label="Meme warning">
-        <div class="mw-sidebox__title">Warning</div>
-        <div class="mw-sidebox__body">This wiki contains traces of “real memes”. Handle responsibly.</div>
-      </section>
-    </aside>
-
-    <main id="content" class="mw-content" aria-label="Content">
-      <div class="mw-toast" id="toast" role="status" aria-live="polite">Welcome to SpingoWiki. Turn sound on for maximum regret.</div>
-
-      <article id="article" class="mw-article" aria-label="Main article">
-        <header class="mw-article__head">
-          <h1 class="mw-h1">SpingoWiki</h1>
-          <div class="mw-sub">From the free encyclopedia that keeps spawning nonsense.</div>
-        </header>
-
-        <div class="mw-lead">
-          <p><strong>SpingoWiki</strong> is a meme-first mini wiki with original mascots (Spingo, Jimbo, Shronk), a soundboard, and a games portal.</p>
-          <p>Type <code>spingo</code>/<code>jimbo</code>/<code>shronk</code> (or your aliases) to swap the site’s accent vibe.</p>
+      <div class="composer" id="composer" hidden>
+        <div class="composer__top">
+          <div class="composer__title">Create post</div>
+          <div class="composer__meta" id="me">—</div>
         </div>
 
-        <aside class="infobox" aria-label="Infobox">
-          <div class="infobox__title">Quick facts</div>
-          <div class="infobox__row"><span>Genre</span><span>Wikipedia-ish meme portal</span></div>
-          <div class="infobox__row"><span>Audio</span><span>Your own samples + fallback</span></div>
-          <div class="infobox__row"><span>Assets</span><span>No external images shipped</span></div>
-          <div class="infobox__row"><span>Primary exports</span><span>Vibes</span></div>
-          <div class="infobox__stamps" aria-hidden="true">
-            <span class="stamp">CITATION NEEDED</span>
-            <span class="stamp">REAL</span>
-            <span class="stamp">SUS</span>
-          </div>
-        </aside>
+        <textarea id="post-text" class="composer__text" placeholder="Drop memes, Arma scripting, clowns, eggnog takes…" maxlength="1200"></textarea>
 
-        <nav class="toc" aria-label="Contents">
-          <div class="toc__title">Contents</div>
-          <ol class="toc__list">
-            <li><a href="#characters">Characters</a></li>
-            <li><a href="#meme-tools">Meme tools</a></li>
-            <li><a href="#games">Games</a></li>
-            <li><a href="#faq">FAQ</a></li>
-          </ol>
-        </nav>
+        <div class="row row--wrap">
+          <select id="post-topic" class="input">
+            <option value="memes">memes</option>
+            <option value="clown">clown</option>
+            <option value="arma">arma</option>
+            <option value="arma-scripting">arma scripting</option>
+            <option value="rocket-league">rocket league</option>
+            <option value="eggnog">eggnog</option>
+            <option value="dutch-memes">dutch memes</option>
+            <option value="top-memes-2026">top memes 2026</option>
+          </select>
 
-        <section id="characters" class="mw-section" aria-label="Characters">
-          <h2 class="mw-h2">Characters</h2>
-          <p>These are original mascots that channel familiar archetypes (yellow chaos sea-creature energy, boy-genius sci‑fi energy, green swamp‑tank energy) without using copyrighted designs.</p>
+          <label class="file">
+            <input id="avatar-file" type="file" accept="image/*" />
+            <span>Avatar upload</span>
+          </label>
 
-          <div class="cards" role="list">
-            <button class="card" role="listitem" type="button" data-mascot="spingo">
-              <span class="card__icon" aria-hidden="true">
-                <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M14 18c0-6 4-10 10-10h16c6 0 10 4 10 10v22c0 10-7 18-18 18S14 50 14 40V18z" fill="rgba(255,242,124,0.98)"/>
-                  <circle cx="26" cy="30" r="4" fill="#0645ad"/><circle cx="40" cy="30" r="4" fill="#0645ad"/>
-                  <path d="M22 44c7 6 13 6 20 0" stroke="#0645ad" stroke-width="4" fill="none" stroke-linecap="round"/>
-                </svg>
-              </span>
-              <span class="card__title">Spingo</span>
-              <span class="card__meta">aka “spongebon” (typing alias)</span>
-              <span class="card__desc">Solves life by adding bubbles until the problem leaves.</span>
-            </button>
+          <button class="btn btn--primary" id="btn-post" type="button">Post</button>
+        </div>
 
-            <button class="card" role="listitem" type="button" data-mascot="jimbo">
-              <span class="card__icon" aria-hidden="true">
-                <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M14 34c0-10 8-18 18-18s18 8 18 18v8c0 10-8 18-18 18S14 52 14 42v-8z" fill="rgba(235,240,255,0.98)"/>
-                  <path d="M20 20c5-6 16-6 24 0l-4 7H24l-4-7z" fill="rgba(154,124,255,0.95)"/>
-                  <circle cx="26" cy="36" r="4" fill="#0645ad"/><circle cx="40" cy="36" r="4" fill="#0645ad"/>
-                  <path d="M22 48c7-4 13-4 20 0" stroke="#0645ad" stroke-width="4" fill="none" stroke-linecap="round"/>
-                </svg>
-              </span>
-              <span class="card__title">Jimbo</span>
-              <span class="card__meta">aka “jimmyneutron” (typing alias)</span>
-              <span class="card__desc">Invents solutions for problems you don’t have (then adds sparkle).</span>
-            </button>
+        <div class="muted small">Avatar upload is your profile, not attached media yet (next). Posts are text + topic for now.</div>
+      </div>
 
-            <button class="card" role="listitem" type="button" data-mascot="shronk">
-              <span class="card__icon" aria-hidden="true">
-                <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M12 30c0-12 10-22 20-22s20 10 20 22v10c0 12-10 22-20 22S12 52 12 40V30z" fill="rgba(168,255,203,0.96)"/>
-                  <path d="M18 20l-8-8M46 20l8-8" stroke="rgba(34,124,87,0.85)" stroke-width="6" stroke-linecap="round"/>
-                  <circle cx="26" cy="36" r="4" fill="#0645ad"/><circle cx="40" cy="36" r="4" fill="#0645ad"/>
-                  <path d="M22 50c7 8 13 8 20 0" stroke="#0645ad" stroke-width="4" fill="none" stroke-linecap="round"/>
-                </svg>
-              </span>
-              <span class="card__title">Shronk</span>
-              <span class="card__meta">aka “shrek” (typing alias)</span>
-              <span class="card__desc">Fixes bugs with confidence, volume, and very little evidence.</span>
-            </button>
-          </div>
+      <div class="tabs" id="tabs" hidden>
+        <button class="tab is-on" id="tab-foryou" type="button">For You</button>
+        <button class="tab" id="tab-latest" type="button">Latest</button>
+        <button class="tab" id="tab-topic" type="button">Topic</button>
+      </div>
 
-          <div class="memeBox">
-            <div class="memeBox__title">Citation needed</div>
-            <div class="memeBox__body">Click any mascot card to switch vibe + spawn extremely serious effects.</div>
-          </div>
-        </section>
+      <section class="feed" id="feed" aria-label="Feed"></section>
+    </section>
 
-        <section id="meme-tools" class="mw-section" aria-label="Meme tools">
-          <h2 class="mw-h2">Meme tools</h2>
-          <p>This is the part where you press buttons and pretend it’s research.</p>
+    <aside class="right">
+      <div class="card">
+        <div class="card__title">Topics</div>
+        <div class="chips" id="topics">
+          <button class="chip" data-topic="arma">arma</button>
+          <button class="chip" data-topic="arma-scripting">arma scripting</button>
+          <button class="chip" data-topic="memes">memes</button>
+          <button class="chip" data-topic="clown">clown</button>
+          <button class="chip" data-topic="rocket-league">rocket league</button>
+          <button class="chip" data-topic="eggnog">eggnog</button>
+          <button class="chip" data-topic="dutch-memes">dutch memes</button>
+        </div>
+      </div>
 
-          <div class="toolgrid" aria-label="Soundboard">
-            <button class="mw-btn" type="button" data-sfx="bubble">Bubble</button>
-            <button class="mw-btn" type="button" data-sfx="zap">Zap</button>
-            <button class="mw-btn" type="button" data-sfx="horn">Horn</button>
-            <button class="mw-btn" type="button" data-sfx="slap">Slap patch</button>
-            <button class="mw-btn" type="button" data-sfx="splat">Splat</button>
-            <button class="mw-btn" type="button" data-sfx="laugh">Laugh track</button>
-            <button class="mw-btn" type="button" data-sfx="whoosh">Whoosh</button>
-            <button class="mw-btn mw-btn--danger" id="btn-panic" type="button">PANIC</button>
-          </div>
+      <div class="card">
+        <div class="card__title">Trending (live)</div>
+        <div class="muted small">Updates every 10s. Picks a random popular post.</div>
+        <div id="trending"></div>
+      </div>
 
-          <div class="mw-note">
-            Pro meme tip: type <code>spongebon</code>, <code>jimmyneutron</code>, or <code>shrek</code> to swap vibes without clicking.
-          </div>
-        </section>
+      <div class="card">
+        <div class="card__title">KlonkieWire</div>
+        <div class="muted small">Every 10s we pull a random meme from an external API.</div>
+        <div id="wire"></div>
+      </div>
 
-        <section id="games" class="mw-section" aria-label="Games">
-          <h2 class="mw-h2">Games</h2>
-          <p>There’s a dedicated arcade page with real meme games and the same sound engine.</p>
-          <p><a href="games.html">Open the Meme Arcade</a>.</p>
-
-          <div class="memeBox memeBox--blue">
-            <div class="memeBox__title">Featured game</div>
-            <div class="memeBox__body">Whack-a-Meme: click the stamps before they escape your attention span.</div>
-          </div>
-        </section>
-
-        <section id="faq" class="mw-section" aria-label="FAQ">
-          <h2 class="mw-h2">FAQ</h2>
-
-          <details class="faq" open>
-            <summary>“Can I use real clips from movies/series?”</summary>
-            <div class="faq__body">Only if you have the rights. This repo is set up for you to add your own audio files in <code>assets/sfx/</code>.</div>
-          </details>
-
-          <details class="faq">
-            <summary>“How do I unlock the dumb stuff?”</summary>
-            <div class="faq__body">Click the SW badge 7 times, type secrets, or use Konami. Your keyboard is the key.</div>
-          </details>
-        </section>
-
-        <footer class="mw-footer">
-          <div class="mw-footer__row">This page was last edited at runtime by your vibes.</div>
-          <div class="mw-footer__row">No external assets shipped. Your audio pack is local.</div>
-        </footer>
-      </article>
-    </main>
-  </div>
+      <div class="card">
+        <div class="card__title">Sound tips</div>
+        <div class="muted small">This build uses procedural SFX by default. If you drop real audio in <code>assets/sfx/</code>, it will use those automatically.</div>
+      </div>
+    </aside>
+  </main>
 
   <dialog class="modal" id="modal">
     <form method="dialog" class="modal__inner">
       <div class="modal__top">
-        <div class="modal__title" id="modal-title">Info</div>
-        <button class="mw-btn" value="close" aria-label="Close">Close</button>
+        <div class="modal__title" id="modal-title">Auth</div>
+        <button class="btn" value="close" aria-label="Close">Close</button>
       </div>
       <div class="modal__body" id="modal-body"></div>
       <div class="modal__actions">
-        <button class="mw-btn mw-btn--primary" value="close">Ok</button>
+        <button class="btn btn--primary" value="close">Ok</button>
       </div>
     </form>
   </dialog>
@@ -235,6 +142,7 @@
   <canvas id="fx" class="fx" aria-hidden="true"></canvas>
 
   <script src="core.js" defer></script>
-  <script src="app.js" defer></script>
+  <script type="module" src="firebase.js"></script>
+  <script type="module" src="social.js"></script>
 </body>
 </html>
