Anti-spam warnings: rate-limit post/like/share with toast + sidebar alerts; disable buttons during actions

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
         <div class="card__title">Sounds</div>
         <div class="muted small">Zet meerdere varianten in <code>assets/sfx/</code> (zoals <code>like_1</code>, <code>like_2</code>, …).</div>
       </div>
+
+      <div class="card" aria-label="Anti-spam alerts">
+        <div class="card__title">Anti-spam</div>
+        <div class="muted small">Als je te snel post/liked, krijg je hier (en bovenaan) een waarschuwing.</div>
+        <div id="alerts" class="alerts"></div>
+      </div>
     </aside>
   </main>
 
