Posts: allow GIF/meme upload (image/video) and render media in feed; rename Wire action to 'Bekijken'

--- a/index.html
+++ b/index.html
@@ -111,10 +111,15 @@
             <span>Avatar</span>
           </label>
 
+          <label class="file">
+            <input id="post-media" type="file" accept="image/*,video/*" />
+            <span>GIF/Meme</span>
+          </label>
+
           <button class="btn btn--primary" id="btn-post" type="button">Post</button>
         </div>
 
-        <div class="muted small">Media in posts komt later. Nu: text + topic.</div>
+        <div class="muted small">Nu: text + topic + 1 GIF/meme (image/video). (Meer media features komen later.)</div>
       </div>
 
       <div class="tabs" id="tabs" hidden>
