Rebrand to Memetown (UI + defaults): title/logo, MemeWire, MT initials, theme key migration

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Klonkie’s Social — posts, memes, Arma, Rocket League." />
-  <title>Klonkie’s Social</title>
+  <meta name="description" content="Memetown — posts, memes, games, chaos." />
+  <title>Memetown</title>
 
   <link rel="preload" href="social.css" as="style" />
   <link rel="stylesheet" href="social.css" />
@@ -14,10 +14,10 @@
 
   <header class="top">
     <div class="brand" aria-label="Brand">
-      <div class="logo" aria-hidden="true">K</div>
+      <div class="logo" aria-hidden="true">M</div>
       <div>
-        <div class="brand__name">Klonkie’s Social</div>
-        <div class="brand__tag">Memes, games, Arma scripting.</div>
+        <div class="brand__name">Memetown</div>
+        <div class="brand__tag">Memes, games, chaos.</div>
       </div>
     </div>
 
@@ -139,7 +139,7 @@
       </div>
 
       <div class="card">
-        <div class="card__title">KlonkieWire</div>
+        <div class="card__title">MemeWire</div>
         <div class="muted small">External meme drop every 10s.</div>
         <div id="wire"></div>
       </div>
