--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     </div>
 
     <nav class="nav" aria-label="Top navigation">
-      <a class="nav__link" href="games.html">Arcade</a>
-      <a class="nav__link" href="wiki.html">Wiki</a>
+      <a class="nav__link" data-route-link="home" href="#/home">Home</a>
+      <a class="nav__link" data-route-link="arcade" href="#/arcade">Arcade</a>
+      <a class="nav__link" data-route-link="wiki" href="#/wiki">Wiki</a>
 
       <label class="nav__select" for="theme">
         <span>Theme</span>
@@ -63,72 +64,120 @@
           <button class="chip" data-topic="dutch-memes">dutch memes</button>
         </div>
       </div>
+
+      <div class="card">
+        <div class="card__title">Routes</div>
+        <div class="chips">
+          <a class="chip" href="#/home">Home</a>
+          <a class="chip" href="#/arcade">Arcade</a>
+          <a class="chip" href="#/wiki">Wiki</a>
+        </div>
+      </div>
     </aside>
 
-    <section class="center" aria-label="Main feed">
-      <div class="card card--hero">
-        <div class="hero__title">Home</div>
-        <div class="hero__sub">Login to post. Verify email to interact.</div>
-        <div class="hero__actions">
-          <button class="btn btn--primary" id="btn-open-auth" type="button">Login / Register</button>
-          <button class="btn" id="btn-logout" type="button" hidden>Logout</button>
-          <button class="btn" id="btn-profile" type="button" hidden>Profile</button>
-        </div>
-        <div class="toast" id="toast" role="status" aria-live="polite">Booting…</div>
-      </div>
-
-      <div class="card" id="gate" hidden>
-        <div class="card__title">Verify your email</div>
-        <p class="muted">Check your inbox (and spam/junk). After clicking the verify link, press “I verified”.</p>
-        <div class="row">
-          <button class="btn btn--primary" id="btn-resend" type="button">Resend verification</button>
-          <button class="btn" id="btn-ive-verified" type="button">I verified</button>
-        </div>
-      </div>
-
-      <div class="composer" id="composer" hidden>
-        <div class="composer__top">
-          <div class="composer__title">Create post</div>
-          <div class="composer__meta" id="me">—</div>
+    <section class="center" aria-label="Main">
+      <!-- HOME VIEW -->
+      <div class="view" id="view-home">
+        <div class="card card--hero">
+          <div class="hero__title">Home</div>
+          <div class="hero__sub">Login to post. Verify email to interact.</div>
+          <div class="hero__actions">
+            <button class="btn btn--primary" id="btn-open-auth" type="button">Login / Register</button>
+            <button class="btn" id="btn-logout" type="button" hidden>Logout</button>
+            <button class="btn" id="btn-profile" type="button" hidden>Profile</button>
+          </div>
+          <div class="toast" id="toast" role="status" aria-live="polite">Booting…</div>
         </div>
 
-        <textarea id="post-text" class="composer__text" placeholder="What’s on your mind?" maxlength="1200"></textarea>
-
-        <div class="row row--wrap">
-          <select id="post-topic" class="input">
-            <option value="memes">memes</option>
-            <option value="clown">clown</option>
-            <option value="arma">arma</option>
-            <option value="arma-scripting">arma scripting</option>
-            <option value="rocket-league">rocket league</option>
-            <option value="eggnog">eggnog</option>
-            <option value="dutch-memes">dutch memes</option>
-            <option value="top-memes-2026">top memes 2026</option>
-          </select>
-
-          <label class="file">
-            <input id="avatar-file" type="file" accept="image/*" />
-            <span>Avatar</span>
-          </label>
-
-          <label class="file">
-            <input id="post-media" type="file" accept="image/*,video/*" />
-            <span>GIF/Meme</span>
-          </label>
-
-          <button class="btn btn--primary" id="btn-post" type="button">Post</button>
+        <div class="card" id="gate" hidden>
+          <div class="card__title">Verify your email</div>
+          <p class="muted">Check your inbox (and spam/junk). After clicking the verify link, press “I verified”.</p>
+          <div class="row">
+            <button class="btn btn--primary" id="btn-resend" type="button">Resend verification</button>
+            <button class="btn" id="btn-ive-verified" type="button">I verified</button>
+          </div>
         </div>
 
-        <div class="muted small">Nu: text + topic + 1 GIF/meme (image/video). (Meer media features komen later.)</div>
+        <div class="composer" id="composer" hidden>
+          <div class="composer__top">
+            <div class="composer__title">Create post</div>
+            <div class="composer__meta" id="me">—</div>
+          </div>
+
+          <textarea id="post-text" class="composer__text" placeholder="What’s on your mind?" maxlength="1200"></textarea>
+
+          <div class="row row--wrap">
+            <select id="post-topic" class="input">
+              <option value="memes">memes</option>
+              <option value="clown">clown</option>
+              <option value="arma">arma</option>
+              <option value="arma-scripting">arma scripting</option>
+              <option value="rocket-league">rocket league</option>
+              <option value="eggnog">eggnog</option>
+              <option value="dutch-memes">dutch memes</option>
+              <option value="top-memes-2026">top memes 2026</option>
+            </select>
+
+            <label class="file">
+              <input id="avatar-file" type="file" accept="image/*" />
+              <span>Avatar</span>
+            </label>
+
+            <label class="file">
+              <input id="post-media" type="file" accept="image/*,video/*" />
+              <span>GIF/Meme</span>
+            </label>
+
+            <button class="btn btn--primary" id="btn-post" type="button">Post</button>
+          </div>
+
+          <div class="muted small">Nu: text + topic + 1 GIF/meme (image/video). (Meer media features komen later.)</div>
+        </div>
+
+        <div class="tabs" id="tabs" hidden>
+          <button class="tab is-on" id="tab-foryou" type="button">For You</button>
+          <button class="tab" id="tab-latest" type="button">Latest</button>
+          <button class="tab" id="tab-topic" type="button">Topic</button>
+        </div>
+
+        <section class="feed" id="feed" aria-label="Feed"></section>
       </div>
 
-      <div class="tabs" id="tabs" hidden>
-        <button class="tab is-on" id="tab-foryou" type="button">For You</button>
-        <button class="tab" id="tab-latest" type="button">Latest</button>
-        <button class="tab" id="tab-topic" type="button">Topic</button>
+      <!-- ARCADE VIEW -->
+      <div class="view" id="view-arcade" hidden>
+        <div class="card card--hero">
+          <div class="hero__title">Arcade</div>
+          <div class="hero__sub">3 minigames. Same Memetown vibe, no page reload.</div>
+        </div>
+
+        <div class="card">
+          <iframe class="embed" title="Memetown Arcade" src="arcade.embed.html" loading="lazy"></iframe>
+          <div class="muted small" style="margin-top:10px;">Tip: audio starts after your first interaction (browser rule).</div>
+        </div>
       </div>
 
-      <section class="feed" id="feed" aria-label="Feed"></section>
+      <!-- WIKI VIEW -->
+      <div class="view" id="view-wiki" hidden>
+        <div class="card card--hero">
+          <div class="hero__title">Wiki</div>
+          <div class="hero__sub">Lore + how stuff works. (We’ll expand this.)</div>
+        </div>
+
+        <div class="card">
+          <div class="card__title">What is Memetown?</div>
+          <div class="muted">A single platform: feed + arcade + wiki, all in one shell and theme.</div>
+        </div>
+
+        <div class="card">
+          <div class="card__title">Quick rules</div>
+          <div class="muted small">Verify your email to post/like/comment. GIFs/memes are stored in Firebase Storage.</div>
+        </div>
+
+        <div class="card">
+          <div class="card__title">Coming next</div>
+          <div class="muted small">Profile page, comments/threads, and a real Explore search.</div>
+        </div>
+      </div>
     </section>
 
     <aside class="side side--right" aria-label="Right sidebar">
@@ -175,5 +224,6 @@
   <script src="core.js" defer></script>
   <script type="module" src="firebase.js"></script>
   <script type="module" src="social.js"></script>
+  <script src="spa.js" defer></script>
 </body>
 </html>
